Hide all the fields that aren't filled out. TODO: MAKE LOOK NOT GROSS

--- a/src/app/dashboard/dashboard.template.html
+++ b/src/app/dashboard/dashboard.template.html
@@ -25,12 +25,17 @@
                 <td><strong>Image</strong></td>
                 <td><strong>Name</strong></td>
                 <td><strong>Date of Birth</strong></td>
+                <td><strong>Trigger Time</strong></td>
+                <td><strong>Gender</strong></td>
               </thead>
               <tbody>
                 <tr *ngFor="let person of dataService.persons" (click)="selectPerson(person.id)" class="person-row">
-                  <td><img src={{person.image}} style="width:50px;height:50px;"></td>
-                  <td>{{person.givenName}} {{person.surname}}</td>
+                  <td><img src={{person.photo}} style="width:50px;height:50px;"></td>
+                  <td>{{person.name}}</td>
                   <td>{{person.birthday}}</td>
+                <td>{{person.triggeredOn}}</td>
+                <td>{{person.gender}}</td>
+
                 </tr>
               </tbody>
             </table>
