Replace background with Missing Children's

--- a/src/app/person/person.template.html
+++ b/src/app/person/person.template.html
@@ -14,7 +14,7 @@
       <div class="widget-body">
         <div class="widget-top-overflow text-white">
           <div class="height-250 overflow-hidden">
-            <img class="img-fluid" src="assets/img/pictures/19.jpg">
+            <img class="img-fluid" src="https://s3-us-west-2.amazonaws.com/mcsc-media-library/site-images/homepage-bg.jpg">
           </div>
           <div class="btn-toolbar">
             <div class="form-group">
